# sketch-autoencoder

./: .gitignore  .gitmodules  README.md  eval.py  eval_lerp.py  prepare_dataset.py  pyproject.toml  train_autoencoder.py
sketch_autoencoder/: ade20k_datamodule.py  clip_wrapper.py  coco_datamodule.py  funcs.py  model_blocks.py  pth_datamodule.py  sketch_autoencoder.py
